# raspberry_pi

./: README.md  index.html  index.html.old  sensor_simulation.c
L298N/: .gitignore  Makefile  README.md  main.c  motor.c  system_overview.md
L298N/bluetooth/: Makefile  README.md  car_server.c
L298N/http/: .gitignore  Makefile  car_server.c  main.c  motor.h
L298N/media/: blutooth-control.webm  distance.webm
L298N/motor/: Makefile  motor.c  motor.h
L298N/test/: Makefile  (+3 more)
MQ135/: .gitignore  Makefile  README.md  mq135.c
bcm_digital_gpio/: .gitignore  Makefile  README.md  mult_sensor  read_sensor
bcm_mock/: .gitignore  Makefile  README.md
bcm_pwm_gpio/: .gitignore  Makefile
bme280/: .gitignore  Makefile  Makefile.old  README.md  bme280_01.c  bme280_01p.c
games/takeCareOrange/: .gitignore  CMakeLists.txt  README.md  main.cpp
hcsr04/: .gitignore  Makefile  README.md  hcsr04.c
joystick_module/: Makefile  joystick.c
ldr-speed/: .gitignore  Makefile  README.md  experiment.webm  ldr_test.c  light_gate.c
low-pass-filter/: README.md
mh-z19c/: .gitignore  Makefile  README.md  co2-bluetooth.c  co2.c  co2b.c  room_co2.txt
pir-hcsr501/: .gitignore  Makefile  README.md  sr501.c
register_simulation/: Makefile  sensor_sim
signal-filtering/: .gitignore  Makefile  README.md  high-pass-results.md  low-pass-results.md  rc01.c
system_monitor/: .gitignore  Makefile  README.md
tcp_iot_sensor/: .gitignore  Makefile  README.md  client.c  client_ok.c  network_utils.c  network_utils.h  sensor_log.csv  server.c
virtual_sensors/: .gitignore  Makefile  README.md
(+105 files in other folders)
